--- a/Public/index.html
+++ b/Public/index.html
@@ -32,8 +32,7 @@
            <div class="flex flex-col p-7 rounded-3xl backdrop-blur-3xl">
            <!--  ***  Result  ***  -->
                <div class="h-32 mb-4">
-                   <input class="outline-none border-none bg-white h-20 w-full" type="text" name="numbers" id="numbers">
-                   <div id="result" class="bg-white h-10 w-full"></div>
+                   <div id="typeIng" class="bg-transparent text-gray-150 h-full w-60 transition-all overflow-hidden">4244121459632115582214455233665224</div>
                </div>
            <!--  ***  Signs  ***  -->
                <div>
@@ -59,21 +58,21 @@
                            </svg>
                        </span>
                        </div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">/</div>
-                       <div class="flex items-center justify-center w-12 h-12 pt-1.5 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">*</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">7</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">8</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">9</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">-</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">4</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">5</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">6</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">+</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">1</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">2</div>
-                       <div class="flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">3</div>
-                       <div class="flex items-center justify-center col-span-2 w-full h-full text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">0</div>
-                       <div class="flex items-center justify-center w-12 h-12 pb-3 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">.</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">/</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 pt-1.5 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">*</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">7</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">8</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">9</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">-</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">4</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">5</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">6</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-350 dark:text-darkBlue-400 bg-lightBlue-300 dark:bg-darkBlue-350 rounded-xl hover:bg-lightBlue-650 dark:hover:bg-darkBlue-600 cursor-pointer">+</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">1</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">2</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">3</div>
+                       <div class="num-btn flex items-center justify-center col-span-2 w-full h-full text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">0</div>
+                       <div class="num-btn flex items-center justify-center w-12 h-12 pb-3 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">.</div>
                        <div class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 text-lightBlue-450 dark:text-darkBlue-500 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl hover:bg-lightBlue-700 dark:hover:bg-darkBlue-650 cursor-pointer">=</div>
                    </div>
                </div>
