--- a/Public/index.html
+++ b/Public/index.html
@@ -32,8 +32,8 @@
            <div class="flex flex-col p-7 rounded-3xl backdrop-blur-3xl">
            <!--  ***  Result  ***  -->
                <div class="h-32 mb-4 max-w-60">
-                   <div id="typeIng" class="text-end break-all text-lightBlue-750 dark:text-gray-150 h-60 pr-12 w-[calc(100%+3rem)] overflow-y-scroll ">1234567444441111111111111215322145789666552222333221144552211444444444444222222222489</div>
-                   <div id="result" class="text-end h-16 pr-12 w-[calc(100%+3rem)] break-all text-3xl text-lightBlue-550 dark:text-darkBlue-100 overflow-y-scroll"></div>
+                   <div id="typeIng" class="break-all text-lightBlue-750 dark:text-gray-150 h-16 pr-12 w-[calc(100%+3rem)] overflow-y-scroll"></div>
+                   <div id="result" class="h-16 pr-12 w-[calc(100%+3rem)] break-all text-3xl text-lightBlue-550 dark:text-darkBlue-100 overflow-y-scroll"></div>
                </div>
            <!--  ***  Signs  ***  -->
                <div>
@@ -74,7 +74,7 @@
                        <div class="num-btn flex items-center justify-center w-12 h-12 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">3</div>
                        <div class="num-btn flex items-center justify-center col-span-2 w-full h-full text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">0</div>
                        <div class="num-btn flex items-center justify-center w-12 h-12 pb-3 text-lightBlue-200 dark:text-darkBlue-250 bg-lightBlue-250 dark:bg-darkBlue-300 rounded-xl hover:bg-lightBlue-600 dark:hover:bg-darkBlue-550 cursor-pointer">.</div>
-                       <div class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 text-lightBlue-450 dark:text-darkBlue-500 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl hover:bg-lightBlue-700 dark:hover:bg-darkBlue-650 cursor-pointer">=</div>
+                       <div id="equal" class="flex items-center justify-center col-start-4 row-start-4 row-span-2 w-12 text-lightBlue-450 dark:text-darkBlue-500 bg-lightBlue-400 dark:bg-darkBlue-450 rounded-xl hover:bg-lightBlue-700 dark:hover:bg-darkBlue-650 cursor-pointer">=</div>
                    </div>
                </div>
            </div>
