--- a/Public/index.html
+++ b/Public/index.html
@@ -14,7 +14,7 @@
         }
     </script>
 </head>
-<body class="font-RobotoBold text-xl bg-lightBlue-100 dark:bg-darkBlue-150 flex flex-col items-center justify-center w-full h-screen relative">
+<body class="font-PopinsBold text-xl bg-lightBlue-100 dark:bg-darkBlue-150 flex flex-col items-center justify-center w-full h-screen relative">
       <!--  ***  SVG  ***  -->
        <svg class="hidden">
            <symbol id="github" fill="currentColor" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
@@ -33,6 +33,7 @@
        <div class="relative overflow-hidden">
            <!--  ***  Circles  ***  -->
            <div class="absolute bg-circle-100 dark:bg-circleDark-100 w-60 h-60 rounded-full top-[-18px] left-[-12px] -z-10"></div>
+           
            <div class="absolute bg-circle-200 dark:bg-circleDark-200 w-60 h-60 rounded-full bottom-[-18px] right-[-12px] -z-10"></div>
            <div class="flex flex-col p-4 md:p-7 rounded-3xl backdrop-blur-3xl">
            <!--  ***  Result  ***  -->
